k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: fraud-detection-app
    app.kubernetes.io/version: latest
  type: ClusterIP
