k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fraud-detection-app
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fraud-detection-app
    weight: 100
  wildcardPolicy: None
